--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "test": "yarn build && yarn e2e"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-flow-comments": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-core": "7.0.0-bridge.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-flow-runtime": "^0.17.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.7",
     "del": "^3.0.0",
     "eslint": "^5.5.0",
     "eslint-config-bliss": "^2.3.0",
+    "flow-runtime": "^0.17.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^1.0.2",
     "gulp-cssnano": "^2.1.3",
