--- a/package.json
+++ b/package.json
@@ -49,26 +49,31 @@
     "testcafe": "^0.22.0"
   },
   "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "prettier --ignore-path .eslintignore --write",
-      "git add"
-    ],
-    "*.json|.{babelrc,eslintrc,prettierrc,stylelintrc}": [
-      "prettier --ignore-path .eslintignore --parser json --write",
-      "git add"
-    ],
-    "*.{css,scss}": [
-      "prettier --ignore-path .eslintignore --write",
-      "git add"
-    ],
-    "*.{yml,less,md}": [
-      "prettier --ignore-path .eslintignore --write",
-      "git add"
-    ],
-    "package.json": [
-      "prettier-package-json --write",
-      "git add"
-    ]
+    "linters": {
+      "*.{js,jsx}": [
+        "eslint --fix",
+        "prettier --ignore-path .eslintignore --write",
+        "git add"
+      ],
+      "*.json|.{babelrc,eslintrc,prettierrc,stylelintrc}": [
+        "prettier --ignore-path .eslintignore --parser json --write",
+        "git add"
+      ],
+      "*.{css,scss}": [
+        "prettier --ignore-path .eslintignore --write",
+        "git add"
+      ],
+      "*.{yml,less,md}": [
+        "prettier --ignore-path .eslintignore --write",
+        "git add"
+      ],
+      "package.json": [
+        "prettier-package-json --write",
+        "git add"
+      ]
+    },
+    "globOptions": {
+      "dot": true
+    }
   }
 }
