--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build src/index.html --out-dir docs",
+    "build": "parcel build src/index.html",
     "precommit": "lint-staged",
     "dev": "parcel src/index.html --open",
     "e2e": "testcafe chrome ./test/index.e2e.js",
     "lint": "eslint .",
+    "publish-gh-pages": "push-dir --dir=dist --branch=gh-pages",
     "start": "yarn dev",
     "test": "yarn build && yarn e2e"
   },
   "devDependencies": {
+    "@amilajack/push-dir": "^0.4.4",
     "babel-core": "^6.26.3",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-dev-expression": "^0.2.1",
