--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "parcel src/index.html --open",
     "e2e": "testcafe chrome ./test/index.e2e.js",
     "lint": "eslint .",
-    "publish-gh-pages": "push-dir --dir=dist --branch=gh-pages --allow-unclean",
+    "publish-gh-pages": "yarn build && push-dir --dir=dist --branch=gh-pages --allow-unclean",
     "start": "yarn dev",
     "test": "yarn build && yarn e2e"
   },
